<resources>
    <string name="app_name">GestionEventoAndroid</string>

    <string name="btnRegistro">Resgistrarse</string>
    <string name="txtRegistro">REGISTRO</string>

    <string name="enBlanco"> </string>
    <string name="valoracion">VALORACIÓN</string>
    <string name="comentario">Pon su comentario: </string>

    <!-- INFORMACION EVENTO -->
    <string name="fechaInicio">Fecha de inicio:</string>
    <string name="fechaFin">Fecha de fin:</string>
    <string name="direccion">Direccion:</string>
    <string name="btnAlta">Darse de alta</string>
    <string name="btnBaja">Darse de baja</string>

    <!-- EMPRESA -->
    <string name="nombreEmpresa">Nombre:</string>
    <string name="nif">NIF:</string>
    <string name="tlfnEmpresa">Telefono:</string>
    <string name="emailEmpresa">Correo:</string>
    <string name="btnAddEmpresa">Registrar</string>



    <!-- INFORMACION PERSONA -->
    <string name="lblNombre">Nombre:</string>
    <string name="lblUser">Usuario:</string>
    <string name="lblEmail">Correo:</string>
    <string name="lblTlfn">Telefono:</string>
    <string name="lblRol">Rol:</string>
    <string name="lblInformacion">Informacion adiccional:</string>
    <string name="btnEditar">Editar</string>

    <!-- EDITAR PERFIL -->
    <string name="txtUser">New Usuario...</string>
    <string name="txtPass">New Contraseña...</string>
    <string name="txtEmail">New Correo...</string>
    <string name="txtTlfn">New Telefono...</string>
    <string name="btnGuardar">Guardar</string>

    <!-- EDITAR PERFIL -->
    <string name="txtNombre">Nombre</string>
    <string name="txtDni">DNI</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtUsername">Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtEmailRegistro">Correo</string>
    <string name="txtTlfnRegistro">Telefono</string>

    <string name="btnCancelar">Cancelar</string>

    <!-- ARRAY ROLES -->
    <string-array name="roles">
        <item>Trabajador</item>
        <item>Voluntario</item>
        <item>Asociado</item>
        <item>Empresa</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_android_onclick">Button android:onClick=</string>

</resources>