<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EmpresaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblNombreEmpresa"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:text="@string/nombreEmpresa"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="216dp" />

        <TextView
            android:id="@+id/lblNIF"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:text="@string/nif"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="288dp" />

        <TextView
            android:id="@+id/lblTlfnEmpresa"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:text="@string/tlfnEmpresa"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/lblEmailEmpresa"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:text="@string/emailEmpresa"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="427dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="215dp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="275dp" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="341dp" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="422dp" />

        <Button
            android:id="@+id/btnAddEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAddEmpresa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="575dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>